--- a/main.css
+++ b/main.css
@@ -1,3 +1,23 @@
 body {
     background-color: slateblue;
 }
+
+#pet-zone {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    padding: 2em;
+    margin: 1em;
+    border: solid .5em black;
+}
+
+img {
+    width: 250px;
+    height: 250px;
+}
